crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__tuples-2.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let x = [1, 2, 3];\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 18,
                    },
                },
                span: 0..18,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                            span: 4..5,
                            kind: Ident(
                                BindingIdent {
                                    name: "x",
                                    mutable: false,
                                    span: 4..5,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 5,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 17,
                                    },
                                },
                                span: 8..17,
                                kind: Tuple(
                                    Tuple {
                                        elems: [
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 10,
                                                        },
                                                    },
                                                    span: 9..10,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 9,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 10,
                                                                    },
                                                                },
                                                                span: 9..10,
                                                                value: "1",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 12..13,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 12,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 13,
                                                                    },
                                                                },
                                                                span: 12..13,
                                                                value: "2",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 15,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                    },
                                                    span: 15..16,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 15,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 16,
                                                                    },
                                                                },
                                                                span: 15..16,
                                                                value: "3",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ],
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
